# teenypath

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
src/: teenypath.cpp
test/: teenypathtest.cpp
